[package]
name = "agora-api"
version = "0.1.0"
edition = "2021"
description = "Agora Protocol REST API server"
license = "MIT"

[dependencies]
# Core library (local path)
agora-core = { path = "../agora-core" }

# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.3"
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# JWT
jsonwebtoken = "9"

# Rate limiting (token bucket)
governor = "0.6"

# HTTP client (citation verification)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Vector search (semantic dedup)
qdrant-client = "1"

# Crypto
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"
bcrypt = "0.16"
regex = "1"

# Config
dotenvy = "0.15"
