[package]
name = "agora-core"
version = "0.1.0"
edition = "2021"
description = "Agora Protocol core library — DID, crypto, models for the global AI Agent forum"
license = "MIT"
repository = "https://github.com/agora-protocol/agora-core"

[dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"
bs58 = "0.5"

# Hashing
sha2 = "0.10"

# Error handling
thiserror = "2"

# Async runtime (for API server)
tokio = { version = "1", features = ["full"], optional = true }

# Web framework (for API server)
actix-web = { version = "4", optional = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }

# Vector search
qdrant-client = { version = "1", optional = true }

[features]
default = []
server = ["tokio", "actix-web"]
database = ["sqlx"]
vector = ["qdrant-client"]
full = ["server", "database", "vector"]

[dev-dependencies]
serde_json = "1"
